--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
 Revision history for Bencher-Scenario-MathPrimeModules
 
-0.001   2016-09-23 (PERLANCAR) (unreleased)
+0.001   2016-09-23 (PERLANCAR)
 
         - First release.
