--- a/Changes
+++ b/Changes
@@ -1,5 +1,14 @@
 Revision history for Bencher-Scenario-MathPrimeModules
 
+0.002   2017-01-06 (PERLANCAR)
+
+        - Enable Math::Prime::FastSieve [GH#1], thanks DANAJ.
+
+        - Disable caching on Acme::PERLANCAR::Prime [GH#2], also uses
+          erat_primes for Math::Prime::Util which doesn't do any caching. Thanks
+          DANAJ.
+
+
 0.001   2016-09-23 (PERLANCAR)
 
         - First release.
